--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
