--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "paulodevmais <paulo.sergio@tallos.com.br>",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "bcrypt": "^5.1.0",
+    "jest": "^29.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
