--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "paulodevmais <paulo.sergio@tallos.com.br>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
