--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,13 @@
 version: '3'
 
 services:
-	api:
-		build: .
-		entrypoint: sh ./.docker/entrypoint.sh
-		container_name: api-ecommerce
-		ports:
-			- 3030:3030
-		volumes:
-			- ./:/home/app/api-ecommence
-		tty: true
+  api:
+    build: .
+    container_name: ecommerce
+    image: api-ecommerce
+    ports:
+      - 3030:3030
+    volumes:
+      - ./:/home/app/api-ecommerce
+    tty: true
+    command: npm run dev
