--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,10 @@ version: '3'
 services:
   api:
     build: .
-    container_name: ecommerce
-    image: api-ecommerce
+    entrypoint: sh ./.docker/entrypoint.sh
+    container_name: api-ecommerce
     ports:
       - 3030:3030
     volumes:
       - ./:/home/app/api-ecommerce
     tty: true
-    command: npm run dev
