chore: adicionando serviço mongodb

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,23 @@ services:
     volumes:
       - ./:/home/app/api-ecommerce
     tty: true
+    networks:
+      - ecommerce-network
+
+  db:
+    image: mongo:4.4
+    container_name: mongodb
+    ports:
+      - 27017:27017
+    volumes:
+      - /mongodb/dbdata:/data/db
+      - /mongodb/configdb:/data/configdb
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+    environment:
+      MONGO_INITDB_DATABASE: ecommerce
+    networks:
+      - ecommerce-network
+
+networks:
+  ecommerce-network:
+    driver: bridge
